        PR target/47862         * config/rs6000/rs6000.h (HARD_REGNO_CALLER_SAVE_MODE): Define.         * config/rs6000/e500.h (HARD_REGNO_CALLER_SAVE_MODE): Undefine         before definition.

* testsuite/gcc.target/powerpc/pr47862.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170748 138bc75d-0d04-0410-961f-82ee72b054a4